--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -45,3 +45,16 @@
     justify-content: start;
     width: 50%;
 }
+
+.btn {
+    padding: .2rem 1rem;
+    border-radius: 5px;
+    background-color: rgb(138, 231, 200);
+}
+
+.displayType {
+    padding: 1rem;
+    display: flex;
+    width: 20%;
+    justify-content: space-between;
+}
