--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -54,7 +54,8 @@
 
 .displayType {
     padding: 1rem;
-    display: flex;
-    width: 20%;
-    justify-content: space-between;
+}
+
+.del {
+    background-color: tomato;
 }
